Fight Wrap Fix
Fixed bug in fight tab where monster notes table
wouldn't text wrap appropriately causing overlap
with main controls layout.

--- a/html/style.css
+++ b/html/style.css
@@ -269,7 +269,7 @@ healthbar {
 
 
 fightside {
-    width: 35%
+    width: 50rem;
 }
 
 input:focus, textarea:focus, select:focus{
